--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
       </div>
       <div>
         <h3>Titre - h3</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quo
+          nihil aliquid reiciendis quos! Aliquam commodi, vitae optio quibusdam
+          aspernatur vero, nulla nesciunt sequi provident alias cupiditate qui
+          recusandae. Tenetur nam nesciunt porro alias, ratione blanditiis saepe
+          possimus eum modi expedita labore quia, libero omnis facere amet sint
+          commodi incidunt illum earum. Doloribus, cumque placeat ducimus ad
+          porro nisi.
+        </p>
       </div>
       <div>
         <h4>Titre h4</h4>
