--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         </p>
       </div>
       <div>
-        <h4>Titre h4</h4>
+        <h4>Version 3 Titre h4</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+          rerum sunt praesentium laboriosam, maiores nesciunt animi illo alias
+          libero neque.
+        </p>
       </div>
     </section>
   </body>
